# datasnap

./: .gitignore  CLAUDE.md  DEVLOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
datasnap/: __init__.py  cli.py
datasnap/charts/: __init__.py  terminal.py
datasnap/loaders/: __init__.py  csv_loader.py  detect.py  json_loader.py
datasnap/quality/: __init__.py  checks.py  duplicates.py  outliers.py  score.py
datasnap/reports/: __init__.py  export.py  terminal.py
datasnap/stats/: __init__.py  categorical.py  inference.py  missing.py  numeric.py  summary.py
tests/: test_categorical.py  test_charts.py  test_cli.py  test_duplicates.py  test_edge_cases.py  test_export.py  test_inference.py  test_loaders.py  test_missing.py  test_numeric.py  test_outliers.py  test_quality.py  test_quality_checks.py  test_stats.py
tests/fixtures/: nested.json  sample.csv  sample.json  sample.jsonl  sample.tsv
